--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -93,7 +93,7 @@
    }
 
    /* Begin Equal Height Rules */
-   &--equal-height-at-large {
+   .flexbox &--equal-height-at-large {
       @mixin atLarge {
          display: flex;
       }
